--- a/raspberry/home_server_setup/home_server.yml
+++ b/raspberry/home_server_setup/home_server.yml
@@ -1,5 +1,7 @@
 ---
 - name: server user account setup
+  # so that we don't try to log in with "pi" when it's gone
+  gather_facts: no
   hosts: all
   remote_user: pi
   vars_files:
@@ -10,8 +12,9 @@
 
   tasks:
   - name: detect default server user
-    local_action: shell ssh pi@{{ inventory_hostname }} "echo connected..."
+    local_action: shell sshpass -p raspberry ssh pi@{{ inventory_hostname }} "echo connected..."
     register: pi_user_exists
+    ignore_errors: true
   - name: create server user
     when: pi_user_exists.rc == 0
     user:
@@ -25,24 +28,7 @@
     become: true
     become_user: "{{ server_user }}"
 
-- name: removing default pi user
-  hosts: all
-  remote_user: butla
-  become: true
-  vars_files:
-  - passwords.yml
-  vars:
-    ansible_become_pass: "{{ server_user_password_raw }}"
-
-  tasks:
-  - name: kill pi user processes
-    command: pkill -u pi
-    register: pkill_out
-    changed_when: pkill_out.rc == 0
-  - name: remove pi user
-    user: name=pi state=absent
-
-  # TODO przerob na role
+# TODO przerob na role
 
 - name: set up backup server
   hosts: all
@@ -52,8 +38,16 @@
   - passwords.yml
   vars:
     ansible_become_pass: "{{ server_user_password_raw }}"
+    new_hostname: danusipi3
 
   tasks:
+  - name: kill pi user processes
+    command: pkill -u pi
+    register: pkill_out
+    changed_when: pkill_out.rc == 0
+    ignore_errors: true
+  - name: remove pi user
+    user: name=pi state=absent
   - name: ensure ntfs-3g is there for mounts
     apt:
       update_cache: yes
