Starting Ansible for Kubuntu

--- a/machine_configurations/main_machine.yml
+++ b/machine_configurations/main_machine.yml
@@ -1,9 +1,9 @@
 ---
 - name: main machine setup
   hosts: localhost
-  become: true
 
   roles:
-  - common
+  - { role: common, become: true }
   - dev_machine
+  - kubuntu
 
