--- a/machine_configurations/roles/dev_machine/tasks/main.yml
+++ b/machine_configurations/roles/dev_machine/tasks/main.yml
@@ -3,6 +3,7 @@
   command: apt install python-apt
   register: install_output
   changed_when: install_output.stdout.find('python-apt is already the newest') == -1
+  become: true
 
 - name: install programs
   apt: name={{ item }}
@@ -21,12 +22,15 @@
   - tree
   - vim
   - xclip # for tmux-yank
+  become: true
 
 - name: upgrade pip for python 3
   pip: name=pip executable=pip3 state=latest
+  become: true
   
 - name: upgrade pip for python 2
   pip: name=pip executable=pip2 state=latest
+  become: true
 
 - name: install python tools
   pip:
@@ -36,37 +40,41 @@
   with_items:
   - httpie
   - ptpython
+  - pudb
   - subliminal
   - tox
   - virtualenvwrapper
-  become: false
+
+- name: install python 2 tools
+  pip:
+    name: "{{ item }}"
+    executable: pip2
+    extra_args: --user
+  with_items:
+  - bpython # to use with 2, because ptpython will work with 3
+  - pudb
 
 - name: setup tmux plugins
   git: repo=https://github.com/tmux-plugins/tpm dest={{ user_home }}/.tmux/plugins/tpm
-  become: false
 
 - name: create directories for vim plugins
   file: path={{ user_home }}/.vim/{{ item }} state=directory
   with_items:
   - autoload
   - bundle
-  become: false
 
 - name: setup vim plugin system
   get_url:
     url: https://tpo.pe/pathogen.vim
     dest: "{{ user_home }}/.vim/autoload/pathogen.vim"
-  become: false
 
 - name: install vim-jedi
   git:
     repo: https://github.com/davidhalter/jedi-vim.git
     dest: "{{ user_home }}/.vim/bundle/jedi-vim"
-  become: false
 
 - name: create ptpython config folder
   file: path={{ user_home }}/.ptpython state=directory
-  become: false
 
 - name: set configuration files
   copy: src={{ item }} dest={{ user_home }}
@@ -77,7 +85,12 @@
   - .ptpython
   - .tmux.conf
   - .vimrc
-  become: false
+
+- name: create pudb config folder
+  file: path={{ user_home }}/.config/pudb state=directory
+
+- name: set pudb config
+  copy: src=pudb.cfg dest={{ user_home }}/.config/pudb
 
 - name: create ranger configs
   # unbuffer is used to fake a interactive terminal,
@@ -88,7 +101,6 @@
   - scope
   register: config_creation
   changed_when: config_creation.stdout.find('creating:') != -1
-  become: false
 
 - name: ranger settings in rc.conf
   lineinfile:
@@ -100,37 +112,25 @@
   - { line: "set show_hidden true", regexp: "set show_hidden .+" }
   - { line: "set collapse_preview false", regexp: "set collapse_preview" }
   - { line: "set dirname_in_tabs true", regexp: "set dirname_in_tabs" }
-  become: false
 
 - name: ranger settings in rifle.conf
   copy: src=rifle.conf dest={{ user_home }}/.config/ranger
-  become: false
 
-# dodaj pudb dla pythona 2 i 3, do tego jeszcze config
- 
-# KUBUNTU
-# configi z dropboxa!
-#  vlc, gthumb, chromium-browser, clementine, synaptic, gimp, inkscape (trzeba dodać ppa), hunspell
+- name: create user's bin folder
+  file: path={{ user_home }}/bin state=directory
 
-#- konsole font: Deja Vu Sans Mono, 10, Book (wszystko w edycji domyślnego profilu)
-#- konsole transparency: 20%
-#- polskie ustawienia daty, liczb, itp (ale nie cały region)
-#- zegar z sekundami i datą, bold
-#- sterowniki do grafiki (powinno sprawdzać, czy jest nvidia, czy radeon)
-#- dropbox (deb ze strony)
-#- keepass2. Ustawić bazę z Dropboxa, ustawić opcję autolocka po 5 minutach.
-#- system setting/startup and shutdown/"start with an empty sesssion", też default leave option: turn off computer
-#- import moich skrótów
-#- "Configure automatic handling of removable storage media" -> "Enable automatic mounting of removable media"
-#- schować w treyu: komunikatory, organizer deamon
-#- w vlc przewijanie na strzałki, zamiast shift+strzałki. Navigate left/right ustawić na shift+strzałki.
-#- docker (install ze skryptu i restart)
-#- apt install sshpass (żeby można było konfigurować raspberry)
-# pycharm z ustawieniami
-# bookmarks w rangerze - development, downloads, Dropbox
+- name: copy tmux editting script
+  copy: src=tmux_edit.sh dest={{ user_home }}/bin
 
-# GŁÓWNY
-# mount danych
-# klucz prywatny do backupów
-# backup (już nic do dropboxa, wszystko na dysk)
-# bookmarks w rangerze
+- name: ssh config folder
+  file: path={{ user_home }}/.ssh state=directory
+
+- name: set ssh key
+  copy:
+    src: "{{ item.src }}"
+    dest: "{{ user_home }}/.ssh"
+    mode: "{{ item.mode }}"
+  with_items:
+  - { src: id_rsa, mode: "u=rw,g-rwx,o-rwx" }
+  - { src: id_rsa.pub, mode: "u=rw,g=r,o=r" }
+
