Ansible: Separated Kubuntu from GUI machine

--- a/machine_configurations/roles/dev_machine/tasks/main.yml
+++ b/machine_configurations/roles/dev_machine/tasks/main.yml
@@ -137,3 +137,6 @@
   - { src: id_rsa, mode: "u=rw,g-rwx,o-rwx" }
   - { src: id_rsa.pub, mode: "u=rw,g=r,o=r" }
 
+- name: create develompent directory
+  file: path={{ ansible_env.HOME }}/development state=directory
+
