Ansible: machine configs almost ready

--- a/machine_configurations/roles/dev_machine/tasks/main.yml
+++ b/machine_configurations/roles/dev_machine/tasks/main.yml
@@ -17,6 +17,7 @@
   - python3-dev
   - python-pip
   - python-dev
+  - sshpass # so that Ansible can log in using password (needed in RPi configuration)
   - ranger
   - tmux
   - tree
