--- a/machine_configurations/roles/gui_machine/tasks/main.yml
+++ b/machine_configurations/roles/gui_machine/tasks/main.yml
@@ -1,30 +1,25 @@
 ---
-# TODO check if too much clementine's config comes from B2
-# TODO gimp single window mode
-# TODO configure VLC
-# video - start fullscreen
-
 - name: add dropbox repository
-  apt_repository: repo='deb http://linux.dropbox.com/ubuntu xenial main'
   become: true
+  apt_repository: repo='deb http://linux.dropbox.com/ubuntu xenial main'
 
 - name: add dropbox package key
-  apt_key: keyserver=pgp.mit.edu id=5044912E
   become: true
+  apt_key: keyserver=pgp.mit.edu id=5044912E
 
 - name: install python-gpgme for dropbox bootstrap
-  apt: name=python-gpgme
   become: true
+  apt: name=python-gpgme
 
 # TODO get rid of unauthorized deb workaround when they fix it
 #- name: install dropbox
 #  apt: name=dropbox update_cache=yes
 #  become: true
 - name: install dropbox
+  become: true
   command: apt-get install -y --allow-unauthenticated dropbox
   register: dropbox_install
   changed_when: dropbox_install.stdout.find('is already the newest') == -1
-  become: true
 
 - name: start and install dropbox daemon
   command: dropbox start -i
@@ -38,23 +33,34 @@
   copy: src=KeePass.config.xml dest={{ ansible_env.HOME }}/.config/KeePass
 
 - name: add inkscape repository
-  apt_repository: repo=ppa:inkscape.dev/stable
   become: true
+  apt_repository: repo=ppa:inkscape.dev/stable
+
+- name: add pycharm repository
+  become: true
+  apt_repository: repo=ppa:mystic-mirage/pycharm
 
 - name: install additional programs
+  become: true
   apt: name={{ item }} update_cache=yes cache_valid_time=3600
   with_items:
   - chromium-browser
   - clementine
+  # could be installed on non-GUI machine, but those with GUI tend to be stronger
+  - docker.io 
   - gimp
   - gthumb
   - hunspell
   - inkscape
   # user needs to log in with Dropbox before running keepass
   - keepass2
+  - pycharm-community
   - synaptic
   - vlc
+
+- name: add user to docker group
   become: true
+  user: name={{ ansible_env.USER }} groups=docker append=yes
 
 - name: create GnuPG config directory
   file: path={{ ansible_env.HOME }}/.gnupg state=directory
@@ -88,12 +94,50 @@
 - set_fact: on_laptop={{ host_name.stdout == 'b3' }}
 
 - name: add nvidia drivers ppa
-  apt_repository: repo=ppa:graphics-drivers/ppa
-  become: true
   when: not on_laptop 
+  become: true
+  apt_repository: repo=ppa:graphics-drivers/ppa
 
 - name: install recommended drivers for GTX-560 Ti
-  apt: name=nvidia-370 update_cache=yes
-  become: true
   when: not on_laptop 
+  become: true
+  apt: name=nvidia-370 update_cache=yes
+
+- name: set clementine settings
+  ini_file:
+    dest: "{{ ansible_env.HOME }}/.config/Clementine/Clementine.conf"
+    section: Player
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  with_items:
+  - { option: volume, value: 100 }
+  - { option: FadeoutEnabled, value: 'false' }
+  - { option: CrossfadeEnabled, value: 'false' }
+  - { option: AutoCrossfadeEnabled, value: 'false' }
+  - { option: NoCrossfadeSameAlbum, value: 'true' }
+  - { option: FadeoutPauseEnabled, value: 'false' }
+
+- set_fact: pycharm_conf_dir={{ ansible_env.HOME }}/.PyCharm2016.2/config
+
+- name: create pycharm config dir
+  file: path={{ pycharm_conf_dir }} state=directory
+
+- name: set pycharm config
+  copy: src=pycharm_settings/{{ item }} dest={{ pycharm_conf_dir }}
+  with_items:
+  - colors
+  - inspection
+  - options
+
+- name: configure vlc
+  lineinfile:
+    dest: "{{ ansible_env.HOME }}/.config/vlc/vlcrc"
+    line: "{{ item.line }}"
+    regexp: "{{ item.regexp }}"
+  with_items:
+  - { line: 'key-jump-extrashort=Left', regexp: 'key-jump-extrashort=' }
+  - { line: 'key-jump+extrashort=Right', regexp: 'key-jump+extrashort=' }
+  - { line: 'key-nav-left=Shift+Left', regexp: 'key-nav-left=' }
+  - { line: 'key-nav-right=Shift+Right', regexp: 'key-nav-right=' }
+  - { line: 'fullscreen=1', regexp: 'fullscreen=' }
 
