Ansible: libssl-dev

--- a/machine_configurations/roles/gui_machine/tasks/main.yml
+++ b/machine_configurations/roles/gui_machine/tasks/main.yml
@@ -58,6 +58,8 @@
   - inkscape
   # user needs to log in with Dropbox before running keepass
   - keepass2
+  # for compiling stuff like cryptography for different Python versions
+  - libssl-dev
   - pycharm-community
   - python3.4
   - python3.4-dev
