--- a/machine_configurations/roles/big_dev/tasks/main.yml
+++ b/machine_configurations/roles/big_dev/tasks/main.yml
@@ -7,6 +7,7 @@
   - hunspell
   # for compiling stuff like cryptography for different Python versions
   - libssl-dev
+  - pandoc
   - python3.4
   - python3.4-dev
   - whois
