Ansible: ranger pager fix

--- a/machine_configurations/roles/small_dev/files/.tmux.conf
+++ b/machine_configurations/roles/small_dev/files/.tmux.conf
@@ -4,6 +4,8 @@ set-window-option -g mode-keys vi
 
 # Custom edition for file managers
 set-environment -g EDITOR $HOME/bin/tmux_edit.sh
+# tmux has some problems with setting a pager
+set-environment -g PAGER less
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
