--- a/machine_configurations/roles/big_dev/tasks/main.yml
+++ b/machine_configurations/roles/big_dev/tasks/main.yml
@@ -10,6 +10,11 @@
   - pandoc
   - python3.4
   - python3.4-dev
+  - texlive
+  - texlive-generic-extra
+  - texlive-lang-english
+  - texlive-lang-polish
+  - texlive-latex-extra
   - whois
 
 - name: add user to docker group
