Ansible: latex tools moved to gui_machine

--- a/machine_configurations/roles/gui_machine/tasks/main.yml
+++ b/machine_configurations/roles/gui_machine/tasks/main.yml
@@ -57,6 +57,11 @@
   - keepass2
   - pycharm-community
   - synaptic
+  - texlive
+  - texlive-generic-extra
+  - texlive-lang-english
+  - texlive-lang-polish
+  - texlive-latex-extra
   - vlc
 
 - name: set ranger bookmarks
