--- a/machine_configurations/roles/small_dev/files/rifle.conf
+++ b/machine_configurations/roles/small_dev/files/rifle.conf
@@ -163,6 +163,7 @@ ext djvu, has atril,  X, flag f = atril -- "$@"
 #-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
+mime ^image, has gwenview,  X, flag f = gwenview -- "$@"
 mime ^image, has gthumb,    X, flag f = gthumb -- "$@"
 mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
 mime ^image, has feh,       X, flag f = feh -- "$@"
