Ansible: keepass as shortcut, thunderbird

--- a/machine_configurations/roles/main_machine/tasks/main.yml
+++ b/machine_configurations/roles/main_machine/tasks/main.yml
@@ -17,7 +17,16 @@
   - { line: "f:/media/butla/Dane/Filmy", regexp: "^f:" }
   - { line: "z:/media/butla/Dane/Zdjęcia (i trochę filmików)", regexp: "^z:" }
 
+- name: install thunderbird
+  become: true
+  apt: name=thunderbird
+
+- name: set favourites menu
+  command: >
+    kwriteconfig5 --file {{ plasma_conf }}
+    --group Containments --group 1 --group Applets --group 2 --group Configuration --group General
+    --key favorites pycharm-community.desktop,kde4-ktorrent.desktop,thunderbird.desktop
+
 # TODO
 # klucz prywatny do backupów
-# backup (już nic do dropboxa, wszystko na dysk)
-# thunderbird i ustawienie jego backup, muszę zgrać jego dotychczasowe wiadomości?
+# backup (dokumenty do dropboxa, reszta na dysk)
