--- a/machine_configurations/roles/kubuntu/tasks/main.yml
+++ b/machine_configurations/roles/kubuntu/tasks/main.yml
@@ -133,7 +133,7 @@
   command: >
     kwriteconfig5 --file {{ plasma_conf }}
     --group Containments --group 1 --group Applets --group 2 --group Configuration --group General
-    --key favorites pycharm-community.desktop,keepass2.desktop,kde4-ktorrent.desktop
+    --key favorites pycharm-community.desktop,kde4-ktorrent.desktop
 
 # it's normally Alt and it messes with Pycharm square selection
 - name: set window control modifier button to meta
