--- a/machine_configurations/roles/main_machine/tasks/main.yml
+++ b/machine_configurations/roles/main_machine/tasks/main.yml
@@ -25,7 +25,7 @@
   command: >
     kwriteconfig5 --file {{ plasma_conf }}
     --group Containments --group 1 --group Applets --group 2 --group Configuration --group General
-    --key favorites pycharm-community.desktop,kde4-ktorrent.desktop,thunderbird.desktop
+    --key favorites pycharm.desktop,kde4-ktorrent.desktop,thunderbird.desktop
 
 # TODO
 # klucz prywatny do backupów
