Ansible: added pdfmod

--- a/machine_configurations/roles/gui_machine/tasks/main.yml
+++ b/machine_configurations/roles/gui_machine/tasks/main.yml
@@ -61,6 +61,7 @@
   - inkscape
   # user needs to log in with Dropbox before running keepass
   - keepass2
+  - pdfmod # for editing PDFs
   - pycharm
   - synaptic
   - texlive
