--- a/machine_configurations/roles/kubuntu/tasks/main.yml
+++ b/machine_configurations/roles/kubuntu/tasks/main.yml
@@ -3,9 +3,12 @@
   become: true
   apt_repository: repo="deb http://archive.canonical.com/ubuntu {{ ansible_distribution_release }} partner"
 
-- name: install skype
+- name: install additional programs
   become: true
-  apt: name=skype update_cache=yes
+  apt: name={{ item }} update_cache=yes
+  with_items:
+  - thunderbird
+  - skype
 
 - name: switch compositor to opengl3.1
   lineinfile:
@@ -133,7 +136,7 @@
   command: >
     kwriteconfig5 --file {{ plasma_conf }}
     --group Containments --group 1 --group Applets --group 2 --group Configuration --group General
-    --key favorites pycharm-community.desktop,kde4-ktorrent.desktop
+    --key favorites pycharm.desktop,kde4-ktorrent.desktop,thunderbird.desktop,virtualbox.desktop
 
 # it's normally Alt and it messes with Pycharm square selection
 - name: set window control modifier button to meta
