Ansible: scanner support

--- a/machine_configurations/roles/gui_machine/tasks/main.yml
+++ b/machine_configurations/roles/gui_machine/tasks/main.yml
@@ -63,6 +63,8 @@
   - keepass2
   - pdfmod # for editing PDFs
   - pycharm
+  # for scanner usage; backed by SANE
+  - simple-scan
   - synaptic
   - texlive
   - texlive-generic-extra
